--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <h1>Welcome, humans</h1>
 <p>This is my personal website!</p>
+  <h2>about me</h2>
+  <p>I am a freshman at UC Berkeley and an intended Data Science major. I love Thai tea, Studio Ghibli movies, the color pink, and carving soap.</p>
 
 </body>
 </html>
