--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p>I am a freshman at UC Berkeley studying Data Science as a Regents' and Chancellor's scholar. I love Thai tea, Studio Ghibli movies, sewing and crafting, the color pink, and carving soap. I am orginially from San Clemente, California (southern Orange County) where I was a lifeguard and water safety instructor. In high school I was a theatre kid, editor-and-chief, and dedicated cosplayer, I quit cosplay but you can see my work @peachibi on Instagram.</p>
   <h2>projects</h2>
   <p>Through RCSA I am on the WebDev committee where I am learing how to build a website!</p2>
-  <h2>Courses</h2>
+  <h2>courses</h2>
   <p> I am finishing up CS10 and am planning to take CS61a and Data 8 in the Spring. In CS10 we learn Python and Snap! which is like a knock off Scratch. </p>
 </body>
 </html>
