--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,12 @@
-hello world
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>Projects</h1>
+  <p>Through RCSA I am on the WebDev committee where I am learing how to build a website!</p2>
+</body>
+</html>
+
