--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <title>Page Title</title>
 </head>
 <body>
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#projects">Projects</a>
+  <input type="text" placeholder="Search..">
+</div>
 
 <h1>Welcome, humans</h1>
 <p>This is my personal website!</p>
