--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
 <title>Page Title</title>
 </head>
 <body>
-<div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#about">About</a>
-  <a href="#projects">Projects</a>
-  <input type="text" placeholder="Search..">
-</div>
+<div class="outer">
+  <div class="row nav center">
+    <div class="col-3">
+      <a class="nav-a" href="/">Home</a>
+    </div>
+    <div class="col-3">
+      <a class="nav-a" href="/projects.html">CS Projects</a>
+    </div>
+    <div class="col-3">
+      <a class="nav-a" href="/courses.html">Courses</a>
+    </div>
+    <div class="col-3">
+      <a class="nav-a" href="/articles/2018_Resume.pdf">Resume</a>
+    </div>
+  </div>
 
 <h1>Welcome, humans</h1>
 <p>This is my personal website!</p>
