--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a class="nav-a" href="/courses.html">Courses</a>
     </div>
     <div class="col-3">
-      <a class="nav-a" href="/articles/2018_Resume.pdf">Resume</a>
+      <a class="nav-a" href="/2018_Resume.pdf">Resume</a>
     </div>
   </div>
 
