--- a/index.html
+++ b/index.html
@@ -4,21 +4,12 @@
 <title>Page Title</title>
 </head>
 <body>
-<div class="outer">
-  <div class="row nav center">
-    <div class="col-3">
-      <a class="nav-a" href="/">Home</a>
-    </div>
-    <div class="col-3">
-      <a class="nav-a" href="/projects.html">CS Projects</a>
-    </div>
-    <div class="col-3">
-      <a class="nav-a" href="/courses.html">Courses</a>
-    </div>
-    <div class="col-3">
-      <a class="nav-a" href="/2018_Resume.pdf">Resume</a>
-    </div>
-  </div>
+<div class="topnav">
+  <a class="nav-a" href="/">Home</a>
+  <a href="projects.html">Projects</a>
+  <a href="courses.html">Courses</a>
+  <a href="2018_Resume.pdf">Resume</a>
+</div>
 
 <h1>Welcome, humans</h1>
 <p>This is my personal website!</p>
