--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,12 @@
 <title>Page Title</title>
 </head>
 <body>
-
+<div class="topnav">
+  <a href="index.html">Home</a>
+  <a class="nav-a" href="/">Projects</a>
+  <a href="courses.html">Courses</a>
+  <a href="2018_Resume.pdf">Resume</a>
+</div>
 <h1>Projects</h1>
   <p>Through RCSA I am on the WebDev committee where I am learing how to build a website!</p2>
 </body>
