--- a/projects.html
+++ b/projects.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <div class="topnav">
-  <a href="index.html">Home</a>
-  <a class="nav-a" href="/">Projects</a>
+  <a class="nav-a" href="/">Home</a>
+  <a href="projects.html">Projects</a>
   <a href="courses.html">Courses</a>
   <a href="2018_Resume.pdf">Resume</a>
 </div>
