--- a/courses.html
+++ b/courses.html
@@ -2,10 +2,7 @@
 <html>
 <body>
 <div class="topnav">
-  <a class="nav-a" href="/">Home</a>
-  <a href="projects.html">Projects</a>
-  <a href="courses.html">Courses</a>
-  <a href="2018_Resume.pdf">Resume</a>
+  <a class="nav-a" href="/">Back</a>
 </div>
 <h1>Courses</h1>
 <p>I am finishing up CS10 and am planning to take CS61a and Data 8 in the Spring. In CS10 we learn Python and Snap! which is like a knock off Scratch.</p>
