--- a/projects.html
+++ b/projects.html
@@ -5,10 +5,7 @@
 </head>
 <body>
 <div class="topnav">
-  <a class="nav-a" href="/">Home</a>
-  <a href="projects.html">Projects</a>
-  <a href="courses.html">Courses</a>
-  <a href="2018_Resume.pdf">Resume</a>
+  <a class="nav-a" href="/">Back</a>
 </div>
 <h1>Projects</h1>
   <p>Through RCSA I am on the WebDev committee where I am learing how to build a website!</p2>
