--- a/index.html
+++ b/index.html
@@ -1,7 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {box-sizing: border-box;}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #2196F3;
+  color: white;
+}
+
+.topnav input[type=text] {
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  border: none;
+  font-size: 17px;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav input[type=text] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;  
+  }
+}
+</style>
+</head>
 </head>
 <body>
 <div class="topnav">
@@ -14,10 +71,8 @@
 <h1>Welcome, humans</h1>
 <p>This is my personal website!</p>
   <h2>about me</h2>
-  <p>I am a freshman at UC Berkeley studying Data Science as a Regents' and Chancellor's scholar. I love Thai tea, Studio Ghibli movies, sewing and crafting, the color pink, and carving soap. I am orginially from San Clemente, California (southern Orange County) where I was a lifeguard and water safety instructor. In high school I was a theatre kid, editor-and-chief, and dedicated cosplayer, I quit cosplay but you can see my work @peachibi on Instagram.</p>
-  <h2>projects</h2>
-  <p>Through RCSA I am on the WebDev committee where I am learing how to build a website!</p2>
-  <h2>courses</h2>
-  <p> I am finishing up CS10 and am planning to take CS61a and Data 8 in the Spring. In CS10 we learn Python and Snap! which is like a knock off Scratch. </p>
+  <p>I am a freshman at UC Berkeley studying Data Science as a Regents' and Chancellor's scholar.
+    I love Thai tea, Studio Ghibli movies, sewing and crafting, the color pink, and carving soap. I am orginially from San Clemente, California (southern Orange County) where I was a lifeguard and water safety instructor. In high school I was a theatre kid, editor-and-chief, and dedicated cosplayer, I quit cosplay but you can see my work @peachibi on Instagram.</p>
+ 
 </body>
 </html>
