--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #e9e9e9;
+  background-color: #ffd1dc;
 }
 
 .topnav a {
   float: left;
   display: block;
-  color: black;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -27,11 +27,11 @@ body {
 
 .topnav a:hover {
   background-color: #ddd;
-  color: black;
+  color: white;
 }
 
 .topnav a.active {
-  background-color: #2196F3;
+  background-color: #ebddff;
   color: white;
 }
 
