--- a/projects.html
+++ b/projects.html
@@ -4,37 +4,31 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing: border-box;}
-
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-
 .topnav {
   overflow: hidden;
-  background-color: #e9e9e9;
+  background-color: #ffd1dc;
 }
-
 .topnav a {
   float: left;
   display: block;
-  color: black;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
 }
-
 .topnav a:hover {
   background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #2196F3;
   color: white;
 }
-
+.topnav a.active {
+  background-color: #ffa4d5;
+  color: white;
+}
 .topnav input[type=text] {
   float: right;
   padding: 6px;
@@ -43,7 +37,6 @@ body {
   border: none;
   font-size: 17px;
 }
-
 @media screen and (max-width: 600px) {
   .topnav a, .topnav input[type=text] {
     float: none;
