--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@ body {
 }
   h1 {
     font-size: 40px;
+    margin-left: 25px;
+    margin-right: 25px;
 }
+  p {
+    font-size: 20px;
+    margin-left: 25px;
+    margin-right: 25px;
+  }
 </style>
 </head>
 </head>
