--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@ body {
     margin-left: 25px;
     margin-right: 25px;
 }
+  h2 {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
   p {
     font-size: 20px;
     margin-left: 25px;
