--- a/courses.html
+++ b/courses.html
@@ -50,6 +50,20 @@ body {
     border: 1px solid #ccc;  
   }
 }
+  h1 {
+    font-size: 40px;
+    margin-left: 25px;
+    margin-right: 25px;
+}
+  h2 {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
+  p {
+    font-size: 20px;
+    margin-left: 25px;
+    margin-right: 25px;
+  }
 </style>
 </head>
 <body>
@@ -57,6 +71,7 @@ body {
   <a class="nav-a" href="/">Back</a>
 </div>
 <h1>Courses</h1>
+ <img src="usagi_gif.gif" alt="usagi gif" width="500" height="600">
 <p>I am finishing up CS10 and am planning to take CS61a and Data 8 in the Spring. In CS10 we learn Python and Snap! which is like a knock off Scratch.</p>
 
 
