--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,20 @@ body {
     border: 1px solid #ccc;  
   }
 }
+   h1 {
+    font-size: 40px;
+    margin-left: 25px;
+    margin-right: 25px;
+}
+  h2 {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
+  p {
+    font-size: 20px;
+    margin-left: 25px;
+    margin-right: 25px;
+  }
 </style>
 </head>
 <body>
