--- a/projects.html
+++ b/projects.html
@@ -64,6 +64,26 @@ body {
     margin-left: 25px;
     margin-right: 25px;
   }
+  a:link {
+    color: pink;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:visited {
+    color: pink;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:hover {
+    color: pink;
+    background-color: transparent;
+    text-decoration: underline;
+}
+a:active {
+    color: purple;
+    background-color: transparent;
+    text-decoration: underline;
+}
 </style>
 </head>
 <body>
@@ -71,7 +91,9 @@ body {
   <a class="nav-a" href="/">Back</a>
 </div>
 <h1>Projects</h1>
-  <p>Through RCSA I am on the WebDev committee where I am learing how to build a website!</p2>
+  <p>Through RCSA I am on the WebDev committee where I am learing how to build a website!</p>
+  <img src="usagi_gif3.gif" alt="Hi!!" width="600" height="500" anlign=middle>
+  <p>For four years I dedicated my life to <a href="https://www.instagram.com/peachibi/?hl=en" target="_blank">performance art and cosplay</a>, but I haven't been able to continue due to school.</p>
 </body>
 </html>
 
