--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,9 @@ a:active {
 </div>
 <h1>Projects</h1>
   <p>Through RCSA I am on the WebDev committee where I am learing how to build a website!</p>
-  <img src="usagi_gif3.gif" alt="Hi!!" width="600" height="500" anlign=middle>
+  <center>
+  <img src="usagi_gif3.gif" alt="smiley" width="650" height="500">
+  </center>
   <p>For four years I dedicated my life to <a href="https://www.instagram.com/peachibi/?hl=en" target="_blank">performance art and cosplay</a>, but I haven't been able to continue due to school.</p>
 </body>
 </html>
