--- a/index.html
+++ b/index.html
@@ -84,9 +84,13 @@ body {
 
 <h1>Welcome, humans</h1>
 <p>This is my personal website!</p>
+  <center>
+  <img src="usagi_gif2.gif" alt="Hi!!" width="600" height="500">
+  </center>
   <h2>about me</h2>
-  <p>I am a freshman at UC Berkeley studying Data Science as a Regents' and Chancellor's scholar.
-    I love Thai tea, Studio Ghibli movies, sewing and crafting, the color pink, and carving soap. I am orginially from San Clemente, California (southern Orange County) where I was a lifeguard and water safety instructor. In high school I was a theatre kid, editor-and-chief, and dedicated cosplayer, I quit cosplay but you can see my work @peachibi on Instagram.</p>
+  <p>I am a freshman at UC Berkeley studying Data Science as a Regents' and Chancellor's scholar.</p>
+  <p>I love Thai tea, Studio Ghibli movies, swimming, sewing and crafting, and the color pink!  </p>
+  <p>Before coming to Berkeley, I lived in San Clemente, California where I was a lifeguard and theatre kid.</p>
  
 </body>
 </html>
