--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("smbackground.png");
+  background-image: url("smbackground1.png");
 }
 
 .topnav {
@@ -86,7 +86,7 @@ body {
 <h1>Welcome, humans</h1>
 <p>This is my personal website!</p>
   <center>
-  <img src="usagi_gif2.gif" alt="Hi!!" width="600" height="500">
+  <img src="usagi_gif2.gif" alt="Hi!!" width="500" height="400">
   </center>
   <h2>about me</h2>
   <p>I am a freshman at UC Berkeley studying Data Science as a Regents' and Chancellor's scholar.</p>
