--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@ body {
 .topnav {
   overflow: hidden;
   background-color: #ffd1dc;
+  background-image: url("smbackground1.gif");
 }
 .topnav a {
   float: left;
