--- a/courses.html
+++ b/courses.html
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+ background-image: url("smbackground1.gif");
 }
 .topnav {
   overflow: hidden;
