--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url("smbackground1.gif");
 }
 .topnav {
   overflow: hidden;
@@ -61,7 +62,7 @@ body {
     margin-right: 25px;
   }
   p {
-    font-size: 20px;
+    font-size: 25px;
     margin-left: 25px;
     margin-right: 25px;
   }
@@ -93,9 +94,9 @@ a:active {
 </div>
 <h1>Projects</h1>
   <p>Through RCSA I am on the WebDev committee where I am learing how to build a website!</p>
-  <center>
+  <p>
   <img src="usagi_gif3.gif" alt="smiley" width="650" height="500">
-  </center>
+  </p>
   <p>For four years I dedicated my life to <a href="https://www.instagram.com/peachibi/?hl=en" target="_blank">performance art and cosplay</a>, but I haven't been able to continue due to school.</p>
 </body>
 </html>
