--- a/courses.html
+++ b/courses.html
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
- background-image: url("smbackground1.gif");
+  background-image: url("smbackground1.png");
 }
 .topnav {
   overflow: hidden;
@@ -61,7 +61,7 @@ body {
     margin-right: 25px;
   }
   p {
-    font-size: 20px;
+    font-size: 25px;
     margin-left: 25px;
     margin-right: 25px;
   }
