--- a/projects.html
+++ b/projects.html
@@ -7,12 +7,11 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("smbackground1.gif");
+  background-image: url("smbackground1.png");
 }
 .topnav {
   overflow: hidden;
   background-color: #ffd1dc;
-  background-image: url("smbackground1.gif");
 }
 .topnav a {
   float: left;
