--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@ body {
     margin-left: 25px;
     margin-right: 25px;
   }
+  h3 {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
   p {
     font-size: 24px;
     margin-left: 25px;
@@ -83,15 +87,15 @@ body {
   <a href="2018_Resume.pdf">Resume</a>
 </div>
 
-<h1>Welcome, humans</h1>
-<p>This is my personal website!</p>
+<h1>Welcome, humans!</h1>
+<h3>This is my personal website!</h3>
  <p>
   <img src="usagi_gif2.gif" alt="Hi!!" width="500" height="400">
  </p>
-  <h2>about me</h2>
-  <p>I am a freshman at UC Berkeley studying Data Science as a Regents' and Chancellor's scholar.</p>
-  <p>I love Thai tea, Studio Ghibli movies, swimming, sewing and crafting, and the color pink!  </p>
-  <p>Before coming to Berkeley, I lived in San Clemente, California where I was a lifeguard and theatre kid.</p>
+  <h2>About me</h2>
+  <h3>I am a freshman at UC Berkeley studying Data Science as a Regents' and Chancellor's scholar.</h3>
+  <h3>I love Thai tea, Studio Ghibli movies, swimming, sewing and crafting, and the color pink!  </h3>
+  <h3>Before coming to Berkeley, I lived in San Clemente, California where I was a lifeguard and theatre kid.</h3>
  
 </body>
 </html>
