--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body {
  </p>
   <h2>About me</h2>
   <h3>I am a freshman at UC Berkeley studying Data Science as a Regents' and Chancellor's scholar.</h3>
-  <h3>I love Thai tea, Studio Ghibli movies, swimming, sewing and crafting, and the color pink!  </h3>
+  <h3>I love Thai tea, Studio Ghibli movies, drawing, sewing and crafting, and the color pink!  </h3>
   <h3>Before coming to Berkeley, I lived in San Clemente, California where I was a lifeguard and theatre kid.</h3>
  
 </body>
