--- a/projects.html
+++ b/projects.html
@@ -60,23 +60,27 @@ body {
     margin-left: 25px;
     margin-right: 25px;
   }
+   h3 {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
   p {
     font-size: 25px;
     margin-left: 25px;
     margin-right: 25px;
   }
   a:link {
-    color: pink;
+    color: purple;
     background-color: transparent;
     text-decoration: none;
 }
 a:visited {
-    color: pink;
+    color: purple;
     background-color: transparent;
     text-decoration: none;
 }
 a:hover {
-    color: pink;
+    color: purple;
     background-color: transparent;
     text-decoration: underline;
 }
@@ -92,11 +96,11 @@ a:active {
   <a class="nav-a" href="/">Back</a>
 </div>
 <h1>Projects</h1>
-  <p>Through RCSA I am on the WebDev committee where I am learing how to build a website!</p>
+  <h3>Through RCSA I am on the WebDev committee where I am learing how to build a website!</h3>
   <p>
   <img src="usagi_gif3.gif" alt="smiley" width="650" height="500">
   </p>
-  <p>For four years I dedicated my life to <a href="https://www.instagram.com/peachibi/?hl=en" target="_blank">performance art and cosplay</a>, but I haven't been able to continue due to school.</p>
+  <h3>For four years I dedicated my life to <a href="https://www.instagram.com/peachibi/?hl=en" target="_blank">performance art and cosplay</h3>, but I haven't been able to continue due to school.</p>
 </body>
 </html>
 
