--- a/courses.html
+++ b/courses.html
@@ -60,6 +60,10 @@ body {
     margin-left: 25px;
     margin-right: 25px;
   }
+  h3 {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
   p {
     font-size: 25px;
     margin-left: 25px;
@@ -75,7 +79,7 @@ body {
  <center>
 <img src="usagi_gif.gif" alt="usagi gif" width="600" height="500">
   </center>
-<p>I am finishing up CS10 and am planning to take CS61a and Data 8 in the Spring. In CS10 we learn Python and Snap! which is like a knock off Scratch.</p>
+<h3>I am finishing up CS10 and am planning to take CS61a and Data 8 in the Spring. In CS10 we learn Python and Snap! which is like a Berkeley edition Scratch.</h3>
 
 
 </body>
