--- a/projects.html
+++ b/projects.html
@@ -96,11 +96,11 @@ a:active {
   <a class="nav-a" href="/">Back</a>
 </div>
 <h1>Projects</h1>
-  <h3>Through RCSA I am on the WebDev committee where I am learing how to build a website!</h3>
+  <h2>Through RCSA I am on the WebDev committee where I am learing how to build a website!</h2>
   <p>
   <img src="usagi_gif3.gif" alt="smiley" width="650" height="500">
   </p>
-  <h3>For four years I dedicated my life to <a href="https://www.instagram.com/peachibi/?hl=en" target="_blank">performance art and cosplay</h3>, but I haven't been able to continue due to school.</p>
+  <h2>For four years I dedicated my life to <a href="https://www.instagram.com/peachibi/?hl=en" target="_blank">performance art and cosplay</a>, but I haven't been able to continue due to school.</h2>
 </body>
 </html>
 
