--- a/courses.html
+++ b/courses.html
@@ -79,7 +79,8 @@ body {
  <center>
 <img src="usagi_gif.gif" alt="usagi gif" width="600" height="500">
   </center>
-<h3>I am finishing up CS10 and am planning to take CS61a and Data 8 in the Spring. In CS10 we learn Python and Snap! which is like a Berkeley edition Scratch.</h3>
+ <h2>I am finishing up CS10 and am planning to take CS61a and Data 8 in the Spring.</h2>
+ <h2>In CS10 we learn Python and Snap! which is like a Berkeley edition Scratch.</h2>
 
 
 </body>
